Update NEET_2022_Martin_Junakovic_Data_Engineering_Task .ipynb

--- a/NEET_2022_Martin_Junakovic_Data_Engineering_Task .ipynb
+++ b/NEET_2022_Martin_Junakovic_Data_Engineering_Task .ipynb
@@ -74,8 +74,8 @@
    "source": [
     "try:\n",
     "    conn = sf.connect(\n",
-    "        user='Vandalism',\n",
-    "        password='Rakovosel0123321',\n",
+    "        user='user',\n",
+    "        password='password',\n",
     "        account='pv92401.europe-west4.gcp',\n",
     "    )\n",
     "    print(\"connected\")\n",
@@ -22862,7 +22862,7 @@
    ],
    "source": [
     "headers = {\n",
-    "    'X-CMC_PRO_API_KEY': '0d3e804f-5aa2-4d0c-8e0c-c53bc0244117',\n",
+    "    'X-CMC_PRO_API_KEY': 'api_key',\n",
     "    'Accepts': 'application/json'\n",
     "}\n",
     "\n",
